--- a/qinshift/cas-flex/style.css
+++ b/qinshift/cas-flex/style.css
@@ -3,3 +3,67 @@
     margin: 0;
     padding: 0;
 }
+nav {
+    width: 100vw;
+    background-color: black;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 30px;
+    padding-right: 30px;
+    
+}
+nav a{
+    color: white;
+    flex-basis: 50px;
+    margin-left: 50px;
+
+}
+@media screen and (min-width: 500px) {
+    nav {
+        padding-left: 30px;
+        justify-content: space-evenly;
+    }
+}
+main {
+    display: flex;
+    width: 100vw;
+    position: relative;
+    height: 100vh;
+
+}
+aside {
+    background-color: gray;
+    flex-grow: 15;
+    display: flex;
+    flex-direction: column;
+
+    padding-left: 10px;
+    padding-top: 10px;
+    min-width: 150px;
+}
+.main-section {
+    flex-grow: 85;
+    background-color: blue;
+    display: flex;
+    flex-wrap: wrap;
+}
+aside a{
+    margin-bottom: 15px;
+    font-size: 1.5rem;
+}
+article {
+    display: flex;
+    width: 250px;
+    height: 250px;
+    flex-direction: column;
+    margin: 20px;
+    border: 1px solid red;
+    align-items: center;
+
+}
+article img{
+    height: 100px;
+    width: 150px;
+}
