--- a/qinshift/casovi-java/winter-exams/calculator/calc-2/calc.css
+++ b/qinshift/casovi-java/winter-exams/calculator/calc-2/calc.css
@@ -59,6 +59,28 @@ body {
     display: grid;
     grid-template-columns: repeat(4, minmax(0, 1fr));
     gap: 14px;
-    flex: 4;
-
+    flex: 5;
+}
+/*.smRow {
+    flex: 4 !important;
+}
+.smRow > button:nth-child(1),
+.smRow > button:nth-child(2), {
+    background: white ;
+}*/
+.btn {
+    background-color: var(--bg-color);
+    color: var(--text-color);
+    border: 2px solid (--text-color);
+    border-radius: 8px;
+    display: grid;
+    place-items: center;
+    cursor: pointer;
+    transition-duration: 200ms;
+}
+.btn:hover {
+    opacity: 0.8;
+}
+.btn p {
+    font-size: 1.2rem;
 }
